# tiny_researchers

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: research.md
claw/: __init__.py  cli.py  config.py
claw/agent/: context.py  loop.py  memory.py  providers.py  skills.py  subagent.py
claw/agent/tools/: __init__.py  base.py  code_gen.py  dataset_download.py  dataset_search.py  env_builder.py  exec_tool.py  filesystem.py  paper_fetch.py  paper_read.py  paper_search.py  registry.py  web.py
claw/interactive/: __init__.py  gateway.py
claw/interactive/bus/: __init__.py  queue.py
claw/interactive/channels/: __init__.py  base.py  discord.py  email.py  messenger.py  telegram.py  zalo.py
claw/interactive/config/: __init__.py  paths.py  schema.py
claw/providers/: __init__.py  transcription.py
claw/security/: __init__.py  network.py
claw/skills/brainstorm/: SKILL.md
claw/skills/claim-tracker/: SKILL.md
claw/skills/contradiction-detection/: SKILL.md
claw/skills/cross-paper-synthesis/: SKILL.md
claw/skills/dataset-search/: SKILL.md
claw/skills/deep-research/: SKILL.md
claw/skills/evidence-grading/: SKILL.md
claw/skills/gap-analysis/: SKILL.md
claw/skills/memory/: SKILL.md
claw/skills/paper-fetch/: SKILL.md
claw/skills/paper-read/: SKILL.md
claw/skills/paper-read-pdf/: SKILL.md
claw/utils/: __init__.py  helpers.py
docs/handoff/: handoff-20260323-0942.md
tests/: test_e2e_conversational.py  test_e2e_phase1_to_phase2.py  test_interactive_smoke.py  test_phase2_smoke.py  test_smoke.py
(+10 files in other folders)
