[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claw"]

[project]
name = "claw-researcher"
version = "0.2.0"
description = "AI Agent System for Academic Research"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # === LLM ===
    "anthropic>=0.20.0",
    "litellm>=1.82.0",

    # === HTTP Client ===
    "httpx>=0.27.0",

    # === Core Utils ===
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
pdf = [
    "pymupdf>=1.24.0",   # primary — better multi-column extraction
    "pypdf>=4.0.0",      # fallback for paper-read-pdf skill
]
docker = [
    "docker>=7.1.0",
]
channels = [
    "websockets>=12.0",            # Discord Gateway WebSocket
    "python-telegram-bot>=21.0",   # Telegram long-polling
    "aiohttp>=3.9.0",              # Webhook server (Messenger, Zalo)
]

[project.scripts]
claw = "claw.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["claw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
